prod_snapshot_2015-09-24_1030/objects/OnBoardFormModel__c.object
<CustomObject>
    <fields>
        <fullName>FB_Target_Radius__c</fullName>
        <label>FB Target Radius</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FB_Target_State__c</fullName>
        <label>FB Target State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FB_Targeting_Demographics_Age__c</fullName>
        <label>FB Targeting Demographics - Age</label>
        <picklist>
            <picklistValues>
                <fullName>18 - 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 - 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55+</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FB_Targeting_Demographics_Gender__c</fullName>
        <label>FB Targeting Demographics - Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Facebook_Ads_Landing_Page_URL__c</fullName>
        <description>Social Advertising Product Details - USED</description>
        <label>Facebook Ads - Landing Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>First_Email_Address__c</fullName>
        <label>First Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Friday closed all day</description>
        <label>Friday Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_End_Hour__c</fullName>
        <description>Friday end hour</description>
        <label>Friday End Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday_End_Min__c</fullName>
        <description>Friday end min</description>
        <label>Friday End Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday_End_Time__c</fullName>
        <formula>TEXT( Friday_End_Hour__c )&amp;&apos;:&apos;&amp; TEXT( Friday_End_Min__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Friday End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Start_Hour__c</fullName>
        <description>Friday start hour</description>
        <label>Friday Start Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday_Start_Min__c</fullName>
        <description>Friday start min</description>
        <label>Friday Start Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday_Start_Time__c</fullName>
        <formula>TEXT( Friday_Start_Hour__c )&amp;&apos;:&apos;&amp; TEXT( Friday_Start_Min__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Friday Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <description>In relation to &apos;targeted email blast&apos;.</description>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Account_Number__c</fullName>
        <label>Genesys Account Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GooglePlus_Password__c</fullName>
        <description>Google+ Password:</description>
        <label>Google+ Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GooglePlus_Username__c</fullName>
        <description>Google+ Username:</description>
        <label>Google+ Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Facebook_Page__c</fullName>
        <label>Has Facebook Page?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_GooglePlus_Profile__c</fullName>
        <description>Has Google+ Profile?</description>
        <label>Has Google+ Profile?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Google_Maps_Listing_Been_Claimed__c</fullName>
        <label>Has Google Maps Listing Been Claimed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Twitter_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Twitter Profile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Host_Provider_Password__c</fullName>
        <label>Host Provider Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Provider_Username__c</fullName>
        <label>Host Provider Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_URL__c</fullName>
        <inlineHelpText>typically URL to site</inlineHelpText>
        <label>Host URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <description>This field is used to handle displaying 1 validation message for all the various Hours/time controls</description>
        <label>Hours of Operation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Medical_Dental_Legal_License_Name__c</fullName>
        <label>If Medical, Dental, Legal, License Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Business_Brick_Mortar_or_Mobile__c</fullName>
        <label>Is Business Brick &amp; Mortar or Mobile</label>
        <picklist>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Email__c</fullName>
        <inlineHelpText>Landing Page Only</inlineHelpText>
        <label>Lead Capture Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Page_Budget__c</fullName>
        <label>Lead Capture Page Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Page_Option__c</fullName>
        <label>Lead Capture Page Option</label>
        <picklist>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Pages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Capture Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Target_Phone__c</fullName>
        <label>Lead Capture Target Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Legal_Business_Name_DBA__c</fullName>
        <inlineHelpText>Doing Business As</inlineHelpText>
        <label>Legal Business Name DBA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Proposal__c</fullName>
        <label>Link to Proposal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Local_Places_Password__c</fullName>
        <label>Maps Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Places_Reputation_Budget__c</fullName>
        <label>Additional Location(s) Budget</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Places_Reputation_Option__c</fullName>
        <label>Maps &amp; Reputation Option</label>
        <picklist>
            <picklistValues>
                <fullName>Maps &amp; Reputation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Places_Reputation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maps &amp; Reputation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Places_Username__c</fullName>
        <label>Maps Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Email_Budget__c</fullName>
        <label>Managed Email Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Managed_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maps_Budget1__c</fullName>
        <label>1st Location Budget</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OnBoardFormModels</relationshipLabel>
        <relationshipName>OnBoardFormModels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monday_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Monday closed all day checkbox</description>
        <label>Monday Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday_End_Hour__c</fullName>
        <description>Monday end hour</description>
        <label>Monday End Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday_End_Min__c</fullName>
        <description>Monday end min</description>
        <label>Monday End Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday_End_Time__c</fullName>
        <description>monday end time</description>
        <formula>TEXT( Monday_End_Hour__c )&amp;&apos;:&apos;&amp; TEXT( Monday_End_Min__c )</formula>
        <label>Monday End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Start_Hour__c</fullName>
        <label>Monday Start Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday_Start_Min__c</fullName>
        <description>Monday start min</description>
        <label>Monday Start Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday_Start_Time__c</fullName>
        <formula>TEXT(  Monday_Start_Hour__c  )&amp;&apos;:&apos;&amp; TEXT( Monday_Start_Min__c )</formula>
        <label>Monday Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Contract_Value__c</fullName>
        <description>Sum of monthly budgets for all selected products</description>
        <formula>IF(PPC__c, PPC_Budget__c, 0) 
+ 
IF(SEO__c, SEO_Budget__c, 0) 
+ 
IF(Local_Places_Reputation__c, Local_Places_Reputation_Budget__c, 0)
+
IF(Local_Places_Reputation__c, Maps_Budget1__c , 0) 
+
IF(Lead_Capture_Pages__c, Lead_Capture_Page_Budget__c, 0) 
+ 
IF(Social_Advertising__c, Social_Ads_Budget_Month__c, 0) 
+ 
IF(Social_Media_Management__c, Social_Budget__c, 0) 
+ 
IF(Websites__c, Website_Budget_template_or_mobile_only__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_Advertiser__c</fullName>
        <label>Notes - Advertiser</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_LeadCapture__c</fullName>
        <label>Notes - Lead Capture</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_MapsRep__c</fullName>
        <label>Notes - Maps &amp; Reputation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_PPC__c</fullName>
        <label>Notes - PPC</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_SEO__c</fullName>
        <label>Notes - SEO</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_SMM__c</fullName>
        <label>Notes - Social Media Management</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_SocialAds__c</fullName>
        <label>Notes - Social Advertising</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Websites__c</fullName>
        <label>Notes - Websites</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <inlineHelpText>Please enter 1 or more</inlineHelpText>
        <label>Number of Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <description>IF &apos;In-Store Sales&apos; is selected in campain goals THEN display text box</description>
        <label>Offer Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPC_Budget__c</fullName>
        <label>PPC Budget</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPC_Spend_Budget__c</fullName>
        <label>PPC Media Spend</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Services_Not_to_Advertise_For__c</fullName>
        <label>Products/Services Not to Advertise For</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products_Services_to_Advertise_For__c</fullName>
        <label>Products/Services to Advertise For</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products_Services_to_Focus_On__c</fullName>
        <label>Products/Services to Focus On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Publishable_Email_Address__c</fullName>
        <inlineHelpText>Will show live on listing</inlineHelpText>
        <label>Publishable Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Email_Blasts_per_60_Days__c</fullName>
        <inlineHelpText>Quantity of Email Blasts (to be sent within 60 day period)</inlineHelpText>
        <label>Number of Total Standard Email Blasts</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Request_ID__c</fullName>
        <label>Rate Request ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Email_or_Phone_Number__c</fullName>
        <description>Recovery Email or Phone Number</description>
        <label>Recovery Email or Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>